# wav2mp3

./: LICENSE  README.md  pyproject.toml
apps/: main.py
apps/contents/: expander.py
apps/utils/: wav2mp3.py
